Code Review package: "exerciseActivity".